added hamburger menu

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;1,300;1,400;1,500&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <!-- css -->
     <link rel="stylesheet" href="common.css" />
   </head>
@@ -25,6 +29,24 @@
           <li class="nav-link">Contact</li>
         </ul>
       </nav>
+
+      <div class="hamburger-parent">
+        <i class="material-icons">menu</i>
+      </div>
+
+      <div class="sidebar">
+        <div class="nav-container">
+          <ul class="nav-list">
+            <li class="list-item"><a href="#">About</a></li>
+
+            <li class="list-item">
+              <a href="../Contact/index.html">Contact</a>
+            </li>
+            <li class="list-item">Instagram</li>
+          </ul>
+        </div>
+      </div>
+
       <main class="main">
         <div class="hero-text-container">
           <h3 class="CAPTURE brat">CAPTURE</h3>
@@ -48,5 +70,6 @@
       </main>
     </div>
     <script src="app.js"></script>
+    <script src="sidebar.js"></script>
   </body>
 </html>
