--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -10,6 +10,10 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;1,300;1,400;1,500&display=swap"
     rel="stylesheet"
   />
+  <link
+    href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet"
+  />
   <!-- css -->
   <link rel="stylesheet" href="../../common.css" />
   <link rel="stylesheet" href="about.css" />
@@ -25,6 +29,22 @@
           <li class="nav-link">Contact</li>
         </ul>
       </nav>
+      <div class="hamburger-parent">
+        <i class="material-icons">menu</i>
+      </div>
+
+      <div class="sidebar">
+        <div class="nav-container">
+          <ul class="nav-list">
+            <li class="list-item"><a href="#">About</a></li>
+
+            <li class="list-item">
+              <a href="../Contact/index.html">Contact</a>
+            </li>
+            <li class="list-item">Instagram</li>
+          </ul>
+        </div>
+      </div>
       <main class="main">
         <section class="left">
           <div class="inner-container">
@@ -71,5 +91,6 @@
         <section class="right"></section>
       </main>
     </div>
+    <script src="../../sidebar.js"></script>
   </body>
 </html>
