adjusted navigation links

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
       <div class="sidebar">
         <div class="nav-container">
           <ul class="nav-list">
-            <li class="list-item"><a href="#">About</a></li>
+            <li class="list-item">
+              <a href="/pages/about/index.html">About</a>
+            </li>
 
             <li class="list-item">
               <a href="../Contact/index.html">Contact</a>
