--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -36,7 +36,7 @@
       <div class="sidebar">
         <div class="nav-container">
           <ul class="nav-list">
-            <li class="list-item"><a href="#">About</a></li>
+            <li class="list-item"><a href="../../index.html">Home</a></li>
 
             <li class="list-item">
               <a href="../Contact/index.html">Contact</a>
