Added spotlight gallery & landing responsive

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -24,7 +24,7 @@
           <li class="nav-link">
             <a href="../../index.html"> Home</a>
           </li>
-          <li class="nav-link">Photo</li>
+          <li class="nav-link"><a href="../photo/index.html">Photo</a></li>
           <li class="nav-link">Video</li>
           <li class="nav-link">Contact</li>
         </ul>
@@ -38,6 +38,9 @@
           <ul class="nav-list">
             <li class="list-item"><a href="../../index.html">Home</a></li>
 
+            <li class="list-item">
+              <a href="../photo/index.html">Photo</a>
+            </li>
             <li class="list-item">
               <a href="../Contact/index.html">Contact</a>
             </li>
@@ -57,7 +60,7 @@
               </p>
               <button class="about-cta">Contact me</button>
             </article>
-            <svg
+            <!-- <svg
               class="blob"
               width="790"
               height="845"
@@ -85,7 +88,8 @@
                   <stop offset="1" stop-color="#FFEDDF" />
                 </linearGradient>
               </defs>
-            </svg>
+            </svg> -->
+            <img src="../../assets/blobRed.svg" alt="" class="blob" />
           </div>
         </section>
         <section class="right"></section>
