--- a/pages/video/index.html
+++ b/pages/video/index.html
@@ -15,16 +15,20 @@
       rel="stylesheet"
     />
     <!-- css -->
-    <link rel="stylesheet" href="common.css" />
+    <link rel="stylesheet" href="../../common.css" />
+    <link rel="stylesheet" href="photo.css" />
   </head>
   <body>
     <div class="content">
       <nav class="nav">
         <ul class="nav-links">
           <li class="nav-link">
-            <a href="/pages/about/index.html"> About</a>
+            <a href="../../index.html">Home</a>
           </li>
-          <li class="nav-link"><a href="/pages/photo/index.html">Photo</a></li>
+          <li class="nav-link">
+            <a href="../about/index.html"> About</a>
+          </li>
+          <li class="nav-link"><a href="../photo/index.html">Photo</a></li>
           <li class="nav-link">Video</li>
           <li class="nav-link">Contact</li>
         </ul>
@@ -52,29 +56,8 @@
         </div>
       </div>
 
-      <main class="main">
-        <div class="hero-text-container">
-          <h3 class="CAPTURE brat">CAPTURE</h3>
-          <h1 class="ZOE brat">ZOE</h1>
-        </div>
-        <img
-          src="/assets/NewLunaLandscape.JPG"
-          alt="Image of blue eyed huskey"
-          class="slide-1 active"
-        />
-        <img
-          src="/assets/beach.jpg"
-          alt="Image of blue eyed huskey"
-          class="slide-2"
-        />
-        <img
-          src="/assets/CambridgeFlowerCool.JPG"
-          alt="Image of blue eyed huskey"
-          class="slide-3"
-        />
-      </main>
+      <main class="main"></main>
     </div>
-    <script src="app.js"></script>
-    <script src="sidebar.js"></script>
+    <script src="../../sidebar.js"></script>
   </body>
 </html>
