--- a/pages/photo/index.html
+++ b/pages/photo/index.html
@@ -43,6 +43,9 @@
         <div class="nav-container">
           <ul class="nav-list">
             <li class="list-item">
+              <a href="../../index.html">Home</a>
+            </li>
+            <li class="list-item">
               <a href="/pages/about/index.html">About</a>
             </li>
             <li class="list-item">
