landing img compression

--- a/index.html
+++ b/index.html
@@ -58,18 +58,14 @@
           <h1 class="ZOE brat">ZOE</h1>
         </div>
         <img
-          src="/assets/NewLunaLandscape.JPG"
-          alt="Image of blue eyed huskey"
+          src="/assets/NewLunaLandscapeComp.jpg"
+          alt="close up blue eyed huskey"
           class="slide-1 active"
         />
+        <img src="/assets/beach.jpg" alt="Sunset on a beach" class="slide-2" />
         <img
-          src="/assets/beach.jpg"
-          alt="Image of blue eyed huskey"
-          class="slide-2"
-        />
-        <img
-          src="/assets/CambridgeFlowerCool.JPG"
-          alt="Image of blue eyed huskey"
+          src="/assets/CambridgeFlowerCoolComp.jpg"
+          alt="Small purple flowers with bokeh background"
           class="slide-3"
         />
       </main>
