Added Contact page from old site

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
           </li>
           <li class="nav-link"><a href="/pages/photo/index.html">Photo</a></li>
           <li class="nav-link">Video</li>
-          <li class="nav-link">Contact</li>
+          <li class="nav-link">
+            <a href="/pages/contact/index.html">Contact</a>
+          </li>
         </ul>
       </nav>
 
@@ -45,7 +47,7 @@
             </li>
 
             <li class="list-item">
-              <a href="../Contact/index.html">Contact</a>
+              <a href="/pages/contact/index.html">Contact</a>
             </li>
             <li class="list-item">Instagram</li>
           </ul>
