adjusted photo gallery resizing and contact page

--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -43,6 +43,9 @@
         <div class="nav-container">
           <ul class="nav-list">
             <li class="list-item">
+              <a href="../../index.html">Home</a>
+            </li>
+            <li class="list-item">
               <a href="/pages/about/index.html">About</a>
             </li>
             <li class="list-item">
@@ -57,7 +60,7 @@
         </div>
       </div>
 
-      <main class="main">
+      <main class="main outer-main">
         <div class="backdrop-container">
           <main>
             <section class="social-box">
@@ -96,7 +99,7 @@
 
                 <form
                   class="inputs"
-                  action="mailto:zoenewtonkisly@icloud.com"
+                  action="mailto:seanstanfield0@gmail.com"
                   method="GET"
                   enctype="text/plain"
                 >
