--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -24,9 +24,9 @@
           <li class="nav-link">
             <a href="../../index.html"> Home</a>
           </li>
+          <li class="nav-link"><a href="../about/index.html">About</a></li>
           <li class="nav-link"><a href="../photo/index.html">Photo</a></li>
-          <li class="nav-link">Video</li>
-          <li class="nav-link">Contact</li>
+          <li class="nav-link"><a href="../contact/index.html">Contact</a></li>
         </ul>
       </nav>
       <div class="hamburger-parent">
