--- a/pages/photo/index.html
+++ b/pages/photo/index.html
@@ -30,8 +30,7 @@
             <a href="../about/index.html"> About</a>
           </li>
           <li class="nav-link"><a href="../photo/index.html">Photo</a></li>
-          <li class="nav-link">Video</li>
-          <li class="nav-link">Contact</li>
+          <li class="nav-link"><a href="../contact/index.html">Contact</a></li>
         </ul>
       </nav>
 
@@ -140,10 +139,51 @@
             <img src="../../assets/redflower.jpeg" />
           </div>
           <!-- Row -->
-          <div class="img-box spotlight large"></div>
-          <div class="img-box spotlight large"></div>
-          <div class="img-box spotlight small"></div>
-          <div class="img-box spotlight small"></div>
+          <div class="img-box spotlight large">
+            <img src="../../assets/KeiraLeaf.jpg" alt="" />
+          </div>
+          <div class="img-box spotlight large">
+            <img src="../../assets/LunaLeft.jpg" alt="" />
+          </div>
+          <div class="img-box spotlight small">
+            <img src="../../assets/buildingUpward.jpg" alt="" />
+          </div>
+          <div class="img-box spotlight small">
+            <img src="../../assets/stayALert.jpg" alt="" />
+          </div>
+          <div class="img-box spotlight small">
+            <img src="../../assets/redSky.jpg" alt="" />
+          </div>
+          <div class="img-box spotlight large">
+            <img src="../../assets/twinsStanding.jpg" alt="" />
+          </div>
+          <div class="img-box spotlight large">
+            <img src="../../assets/oldManBW.jpg" alt="" />
+          </div>
+          <div class="img-box spotlight small">
+            <img src="../../assets/cambridgeRose.jpg" alt="" />
+          </div>
+          <div class="img-box spotlight large">
+            <img src="../../assets/BWKiera2.JPG" alt="" />
+          </div>
+          <div class="img-box spotlight large">
+            <img src="../../assets/KeiraFairyLights.jpg" alt="" />
+          </div>
+          <div class="img-box spotlight large">
+            <img src="../../assets/rapManGrey.JPG" alt="" />
+          </div>
+          <div class="img-box spotlight large">
+            <img src="../../assets/rapManBlack.JPG" alt="" />
+          </div>
+          <div class="img-box spotlight large">
+            <img src="../../assets/AnakuaPetalPeek.jpg" alt="" />
+          </div>
+          <div class="img-box spotlight small">
+            <img src="../../assets/blueFlower.jpg" alt="" />
+          </div>
+          <div class="img-box spotlight small">
+            <img src="../../assets/GoldenPumpkin.jpg" alt="" />
+          </div>
         </section>
       </main>
     </div>
