adding data-src attribute

--- a/pages/photo/index.html
+++ b/pages/photo/index.html
@@ -139,49 +139,94 @@
             <img src="../../assets/redflower.jpeg" />
           </div>
           <!-- Row -->
-          <div class="img-box spotlight large">
+          <div
+            class="img-box spotlight large"
+            data-src="../../assets/KeiraLeaf.jpg"
+          >
             <img src="../../assets/KeiraLeaf.jpg" alt="" />
           </div>
-          <div class="img-box spotlight large">
+          <div
+            class="img-box spotlight large"
+            data-src="../../assets/LunaLeft.jpg"
+          >
             <img src="../../assets/LunaLeft.jpg" alt="" />
           </div>
-          <div class="img-box spotlight small">
+          <div
+            class="img-box spotlight small"
+            data-src="../../assets/buildingUpward.jpg"
+          >
             <img src="../../assets/buildingUpward.jpg" alt="" />
           </div>
-          <div class="img-box spotlight small">
+          <div
+            class="img-box spotlight small"
+            data-src="../../assets/stayALert.jpg"
+          >
             <img src="../../assets/stayALert.jpg" alt="" />
           </div>
-          <div class="img-box spotlight small">
+          <div
+            class="img-box spotlight small"
+            data-src="../../assets/redSky.jpg"
+          >
             <img src="../../assets/redSky.jpg" alt="" />
           </div>
-          <div class="img-box spotlight large">
+          <div
+            class="img-box spotlight large"
+            data-src="../../assets/twinsStanding.jpg"
+          >
             <img src="../../assets/twinsStanding.jpg" alt="" />
           </div>
-          <div class="img-box spotlight large">
+          <div
+            class="img-box spotlight large"
+            data-src="../../assets/oldManBW.jpg"
+          >
             <img src="../../assets/oldManBW.jpg" alt="" />
           </div>
-          <div class="img-box spotlight small">
+          <div
+            class="img-box spotlight small"
+            data-src="../../assets/cambridgeRose.jpg"
+          >
             <img src="../../assets/cambridgeRose.jpg" alt="" />
           </div>
-          <div class="img-box spotlight large">
+          <div
+            class="img-box spotlight large"
+            data-src="../../assets/BWKiera2.JPG"
+          >
             <img src="../../assets/BWKiera2.JPG" alt="" />
           </div>
-          <div class="img-box spotlight large">
+          <div
+            class="img-box spotlight large"
+            data-src="../../assets/KeiraFairyLights.jpg"
+          >
             <img src="../../assets/KeiraFairyLights.jpg" alt="" />
           </div>
-          <div class="img-box spotlight large">
+          <div
+            class="img-box spotlight large"
+            data-src="../../assets/rapManGrey.JPG"
+          >
             <img src="../../assets/rapManGrey.JPG" alt="" />
           </div>
-          <div class="img-box spotlight large">
+          <div
+            class="img-box spotlight large"
+            data-src="../../assets/rapManBlack.JPG"
+          >
             <img src="../../assets/rapManBlack.JPG" alt="" />
           </div>
-          <div class="img-box spotlight large">
+          <div
+            class="img-box spotlight large"
+            data-src="../../assets/AnakuaPetalPeek.jpg"
+          >
             <img src="../../assets/AnakuaPetalPeek.jpg" alt="" />
           </div>
-          <div class="img-box spotlight small">
+          <div
+            class="img-box spotlight small"
+            data-src="../../assets/blueFlower.jpg"
+          >
             <img src="../../assets/blueFlower.jpg" alt="" />
           </div>
-          <div class="img-box spotlight small">
+          <div
+            class="img-box spotlight small"
+            data-src="../../assets/GoldenPumpkin.jpg"
+          >
             <img src="../../assets/GoldenPumpkin.jpg" alt="" />
           </div>
         </section>
