cross in sidebar on landing, removed red about

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
       <div class="sidebar">
         <div class="nav-container">
+          <i class="material-icons sidebar-cross">clear</i>
           <ul class="nav-list">
             <li class="list-item">
               <a href="/pages/about/index.html">About</a>
