--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -34,6 +34,8 @@
       </div>
 
       <div class="sidebar">
+        <i class="material-icons sidebar-cross">clear</i>
+
         <div class="nav-container">
           <ul class="nav-list">
             <li class="list-item"><a href="../../index.html">Home</a></li>
@@ -54,11 +56,16 @@
             <article class="text">
               <h2 class="about-title">About me</h2>
               <p class="about-body">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptatum dolores officiis debitis natus modi beatae eos
-                eveniet amet delectus quasi?
+                Hello I'm Zoe Newton Kisly ,a seventeen year old film student
+                from London.
               </p>
-              <button class="about-cta">Contact me</button>
+              <button class="about-cta">
+                <a
+                  href="../contact/index.html"
+                  style="text-decoration: none; color: black;"
+                  >Contact me</a
+                >
+              </button>
             </article>
             <!-- <svg
               class="blob"
@@ -89,7 +96,7 @@
                 </linearGradient>
               </defs>
             </svg> -->
-            <img src="../../assets/blobRed.svg" alt="" class="blob" />
+            <img src="../../assets/blob.svg" alt="" class="blob" />
           </div>
         </section>
         <section class="right"></section>
