--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -30,8 +30,7 @@
             <a href="../about/index.html"> About</a>
           </li>
           <li class="nav-link"><a href="../photo/index.html">Photo</a></li>
-          <li class="nav-link">Video</li>
-          <li class="nav-link">Contact</li>
+          <li class="nav-link"><a href="#">Video</a></li>
         </ul>
       </nav>
 
