Added instagram link

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -46,7 +46,9 @@
             <li class="list-item">
               <a href="../Contact/index.html">Contact</a>
             </li>
-            <li class="list-item">Instagram</li>
+            <li class="list-item">
+              <a href="https://www.instagram.com/capturezoe/">Instagram</a>
+            </li>
           </ul>
         </div>
       </div>
