--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
             <li class="list-item">
               <a href="/pages/contact/index.html">Contact</a>
             </li>
-            <li class="list-item">Instagram</li>
+            <li class="list-item">
+              <a href="https://www.instagram.com/capturezoe/">Instagram</a>
+            </li>
           </ul>
         </div>
       </div>
