--- a/pages/photo/index.html
+++ b/pages/photo/index.html
@@ -40,6 +40,8 @@
 
       <div class="sidebar">
         <div class="nav-container">
+          <i class="material-icons sidebar-cross">clear</i>
+
           <ul class="nav-list">
             <li class="list-item">
               <a href="../../index.html">Home</a>
@@ -54,7 +56,9 @@
             <li class="list-item">
               <a href="../Contact/index.html">Contact</a>
             </li>
-            <li class="list-item">Instagram</li>
+            <li class="list-item">
+              <a href="https://www.instagram.com/capturezoe/">Instagram</a>
+            </li>
           </ul>
         </div>
       </div>
