--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
           <li class="nav-link">
             <a href="/pages/contact/index.html">Contact</a>
           </li>
+          <li class="nav-link">
+            <a href="https://www.instagram.com/capturezoe/">Instagram</a>
+          </li>
         </ul>
       </nav>
 
