testing netlify form submission

--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -102,13 +102,14 @@
 
                 <form
                   class="inputs"
-                  action="mailto:seanstanfield0@gmail.com"
                   method="GET"
                   enctype="text/plain"
+                  action="POST"
+                  data-netlify="true"
                 >
                   <input
                     class="name-input"
-                    name="subject"
+                    name="name"
                     id="subject"
                     type="text"
                     placeholder="Full name"
