removed get method

--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -102,7 +102,7 @@
 
                 <form
                   class="inputs"
-                  method="GET"
+                  action="POST"
                   enctype="text/plain"
                   data-netlify="true"
                 >
