added netlify attribute

--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -105,6 +105,7 @@
                   method="POST"
                   enctype="text/plain"
                   data-netlify="true"
+                  netlify
                 >
                   <input
                     class="name-input"
