--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -103,9 +103,10 @@
                 <form
                   class="inputs"
                   method="POST"
-                  enctype="text/plain"
                   data-netlify="true"
                   netlify
+                  name="contact"
+                  Content-type="application/x-www-form-urlencoded"
                 >
                   <input
                     class="name-input"
