--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -62,9 +62,7 @@
                 from London.
               </p>
               <button class="about-cta">
-                <a
-                  href="../contact/index.html"
-                  style="text-decoration: none; color: black;"
+                <a href="../contact/index.html" style="text-decoration: none;"
                   >Contact me</a
                 >
               </button>
